--- a/Graduation_Project.ipynb
+++ b/Graduation_Project.ipynb
@@ -41,22 +41,17 @@
       },
       "source": [
         "import pandas as pd\n",
-        "import seaborn as sea \n",
         "import numpy as np\n",
-        "from sklearn import tree\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.model_selection import cross_val_score\n",
-        "from sklearn.metrics import auc, roc_curve, confusion_matrix\n",
         "import pickle \n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.neural_network import MLPClassifier\n",
-        "from sklearn import metrics"
+        "from sklearn.neural_network import MLPClassifier\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +77,7 @@
       "metadata": {
         "id": "Yaxt6RvhqHsS"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,7 +95,7 @@
         },
         "outputId": "975b4420-1d51-479e-b700-f12ae80a0bc3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +265,7 @@
         },
         "outputId": "f8d057a2-fa3a-4ec4-9f98-aa5cdabb8b7b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +502,7 @@
         },
         "outputId": "88ed25a5-0d72-4cd6-a9ed-5f225e6fd7e3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,7 +730,7 @@
         },
         "outputId": "47840a6a-52e3-49bd-f5b8-4de0214ee4e2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,7 +900,7 @@
         },
         "outputId": "dd4f985a-d095-4ae0-8994-23b68c2d307d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1142,7 +1137,7 @@
         },
         "outputId": "2f25945f-16d8-4fb8-efc1-548b253c4bd4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1395,7 +1390,7 @@
       "metadata": {
         "id": "wau2cFIzHDJT"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1424,7 +1419,7 @@
         },
         "outputId": "34fb45be-b9d8-4ad3-d919-687eda92cc05"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1519,7 +1514,7 @@
         "      return print('Accuracy of Decision Tree Model classifier on test set: {:.2f}'\n",
         "      .format(score)) "
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1544,7 +1539,7 @@
         },
         "outputId": "47b171d2-2fa7-42e9-97d1-6f722d50027f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1598,7 +1593,7 @@
         "      return print('Accuracy of K-NN classifier on test set: {:.2f}'\n",
         "     .format(score)) "
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1623,7 +1618,7 @@
         },
         "outputId": "5cee1c6e-711e-4156-f525-48033c9b3fcd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1675,7 +1670,7 @@
       "metadata": {
         "id": "wet7ZYfpNFbR"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1700,7 +1695,7 @@
         },
         "outputId": "65d4bf37-fbce-46ff-9e56-fe2981929f19"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1747,7 +1742,7 @@
         },
         "outputId": "5016ec89-7a43-4734-c74a-c6635d65f615"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2325,7 +2320,7 @@
         },
         "outputId": "03cf53a8-50a9-4532-d580-24d0ba8e2c01"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2363,7 +2358,7 @@
         },
         "outputId": "1f81cbbb-7bcc-40a6-dd24-0b55169b6011"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2941,7 +2936,7 @@
         },
         "outputId": "8f0fb682-695e-468b-9143-8101f1620fa2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2978,7 +2973,7 @@
         },
         "outputId": "2e5f2820-2fca-4d6c-d104-c61935244daa"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3557,7 +3552,7 @@
         },
         "outputId": "36e3b7bf-333c-44b5-ab14-4e08d2607003"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3594,7 +3589,7 @@
         },
         "outputId": "6d9f00d9-b84a-489e-9ff0-567c6920fee8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4187,7 +4182,7 @@
         },
         "outputId": "5fd8fe68-3c33-4e0f-e8ff-ee8caef8361a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4252,7 +4247,7 @@
       "metadata": {
         "id": "M6cIU2arMBwP"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4278,7 +4273,7 @@
         },
         "outputId": "b786e46a-0d42-486f-fdde-63d9b093b27f"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
